# sync-jira-actions

./: .pre-commit-config.yaml  CHANGELOG.md  Justfile  action.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml
docs/: caller-workflow.yml
