[project]
    authors = [
        { name = "Tomas Sebestik", email = "tomas.sebestik@espressif.com" },
        { name = "Espressif Systems" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: MacOS :: MacOS X",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    dependencies = ["PyGithub==2.2.0", "jira==3.6.0"]
    description = "Espressif GitHub Actions for JIRA synchronization"
    dynamic = ["version"]
    license = { text = "Apache 2.0" }
    name = "sync-jira-actions"
    readme = "README.md"
    requires-python = ">=3.11"

    [project.urls]
        Changelog = "https://github.com/espressif/sync-jira-actions/tags/blob/master/CHANGELOG.md"
        Homepage  = "https://github.com/espressif/sync-jira-actions/tags"
        Source    = "https://github.com/espressif/sync-jira-actions/tags"
        Tracker   = "https://github.com/espressif/sync-jira-actions/tags/issues"

    [project.optional-dependencies]
        dev = [
            "czespressif",
            "pip-tools~=7.3",
            "pre-commit>=3.3",
            "pytest",
            "pytest-cov",
            "just-bin~=1.26.0",
        ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=64"]

[tool.setuptools.packages.find]
    exclude = ["node_modules", "tests"]
    include = ["sync_jira_actions"]

[tool.setuptools.dynamic]
    version = { attr = "sync_jira_actions.__init__.__version__" }

[tool.ruff]
    exclude        = ["tests/"]
    line-length    = 120
    lint.select    = ["B", "E", "F", "I", "S", "W"]
    target-version = "py311"

    [tool.ruff.format]
        quote-style = "single"

    [tool.ruff.lint.isort]
        force-single-line   = true
        lines-between-types = 1

[tool.mypy]
    disallow_incomplete_defs = false
    disallow_untyped_defs    = false
    exclude                  = '^venv/'
    ignore_missing_imports   = true
    python_version           = "3.11"
    warn_no_return           = true
    warn_return_any          = true

[tool.pylint]
    [tool.pylint.MASTER]
        ignore-paths = ["tests/.*"]
    [tool.pylint.'BASIC']
        variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
    [tool.pylint.'MESSAGES CONTROL']
        disable = [
            "duplicate-code",
            "fixme",
            "import-error",
            "import-outside-toplevel",
            "logging-fstring-interpolation",
            "missing-class-docstring",
            "missing-function-docstring",
            "missing-module-docstring",
            "no-name-in-module",
            "too-few-public-methods",
            "too-many-branches",
            "too-many-locals",
            "too-many-return-statements",
            "too-many-statements",
            "ungrouped-imports",
        ]
    [tool.pylint.'FORMAT']
        max-line-length = 120

    [tool.pytest.ini_options]
        addopts          = "-s --log-cli-level DEBUG --cov=. --cov-report=term"
        python_classes   = ["Test*"]
        python_files     = ["test_*.py"]
        python_functions = ["test_*"]
        testpaths        = ["tests"]

    [tool.coverage.run]
        omit = ["__*__.py", "tests/*"]

[tool.yamlfix]
    comments_min_spaces_from_content = 1
    line_length                      = 200
    preserve_quotes                  = true
    section_whitelines               = 1
    sequence_style                   = "keep_style"
    whitelines                       = 1

[tool.commitizen]
    annotated_tag              = true
    bump_message               = 'change(bump): release $current_version → $new_version [skip-ci]'
    changelog_merge_prerelease = true
    name                       = "czespressif"
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version                    = "0.1.1"
    version_files              = ["sync_jira_actions/__init__.py"]
    version_provider           = "commitizen"
